# bevy_egui_rocket_lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV.md  Justfile  NOTES.md  README.md  index.html
.github/workflows/: ci.yml  deploy-pages.yml
assets/models/: pine_trees.glb
assets/textures/: GroundGrassGreen002_COL_4K_1024.png.ktx2  Ryfjallet_cubemap_readme.txt  bambanani_sunset_cubemap_astc4x4.ktx2  bambanani_sunset_cubemap_etc2.ktx2  belfast_sunset_cubemap_astc4x4.ktx2  belfast_sunset_cubemap_etc2.ktx2  citrus_orchard_cubemap_astc4x4.ktx2  citrus_orchard_cubemap_etc2.ktx2  grasslands_sunset_cubemap_astc4x4.ktx2  grasslands_sunset_cubemap_etc2.ktx2  learner_park_cubemap_astc4x4.ktx2  learner_park_cubemap_etc2.ktx2
docs/project_archived/: bug_physics_feel.md  feat_dual_wasm_builds.md  feat_github_pages_hosting.md  feat_parachute_simulation.md  feat_skybox_and_webgpu.md  fix_skybox_faces_and_add_learner_park.md
docs/project_incoming/: bug_fog_appearance.md  bug_physics_feel.md  bug_wasm_audio_autoplay.md  chore_refactor_ui_system.md  feat_contribute_cubemap_docs_upstream.md  feat_dual_wasm_builds.md  feat_dynamic_wind.md  feat_explicit_rocket_mass_model.md  feat_github_pages_hosting.md  feat_launch_history.md  feat_parachute_simulation.md  feat_random_rocket_explosion.md  feat_rocket_cam_pov.md  feat_rocket_collection_model.md  feat_skybox_and_webgpu.md  feat_verlet_shroud_lines.md  feat_wasm_build.md  fix_lighting_calibration.md  fix_skybox_faces_and_add_learner_park.md
docs/project_notes/: REPO_REVIEW_Feb_2026.md  browser_testing.md  bugs.md  (+9 more)
scripts/: README.md  add-skybox.sh  convert-png-compat.sh  convert-png.sh  create-cubemap.sh  process-audio.sh
src/: camera.rs  canopy.rs  cone.rs  drag.rs  fin.rs  fps.rs  ground.rs  inventory.rs  main.rs  menu.rs  parachute.rs  particles.rs  particles_stub.rs  physics.rs  profiling.rs  rendering.rs  rocket.rs  save.rs  scene.rs  sky.rs  terrain.rs  util.rs  webcompat.rs  wind.rs
