[package]
name = "bevy-rocket-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18" }
bevy_egui = "0.39"
bevy-inspector-egui = "0.36"
avian3d = "0.5"
bevy_firework = "0.9"
bevy_utilitarian = "0.9"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

# enable some optimizations for our code in dev mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
